# pytest-defer

./: .gitignore  Makefile  README.md  pyproject.toml  pytest_defer.py  setup.py
.github/workflows/: python-app.yml
tests/: _conftest.py  _test_files.py  conftest.py  test_defer.py
